src/public/assets/css/styles.css
:root {
  color-scheme: light;

  /* Colors */
  --color-font: hsl(0deg 1% 15%);
  --color-background: #fff;
  --color-highlight: hsl(7deg 80% 54%);
  --color-shade-7: hsla(0deg 1% 15% / 7%);
  --color-shade-10: hsla(0deg 1% 15% / 10%);
  --color-shade-40: hsla(0deg 1% 15% / 40%);
  --color-shade-55: hsla(0deg 1% 15% / 55%);
  --color-shade-75: hsla(0deg 1% 15% / 75%);

  /* Effects */
  --hover-transition-duration: 150ms;
  --theme-transition-duration: 250ms;
}

:root[data-theme='dark'] {
  color-scheme: dark;

  /* Colors */
  --color-font: hsl(30deg 27% 91%);
  --color-background: hsl(0deg 5% 9%);
  --color-shade-7: hsla(30deg 27% 91% / 7%);
  --color-shade-10: hsla(30deg 27% 91% / 10%);
  --color-shade-40: hsla(30deg 27% 91% / 45%);
  --color-shade-55: hsla(30deg 27% 91% / 55%);
  --color-shade-75: hsla(30deg 27% 91% / 70%);
}

@font-face {
  font-family: 'Source Sans 3';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('https://fonts.gstatic.com/s/sourcesans3/v15/nwpStKy2OAdR1K-IwhWudF-R3w8aZejf5Hc.woff2')
    format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Source Sans 3';
  font-style: normal;
  font-weight: 700;
  font-display: swap;
  src: url('https://fonts.gstatic.com/s/sourcesans3/v15/nwpStKy2OAdR1K-IwhWudF-R3w8aZejf5Hc.woff2')
    format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
  font-family: 'Source Serif 4';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: url('https://fonts.gstatic.com/s/sourceserif4/v8/vEFI2_tTDB4M7-auWDN0ahZJW1gb8te1Xb7G.woff2')
    format('woff2');
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA,
    U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191,
    U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

html {
  font-size: 9px;
}

@media (min-width: 768px) {
  html {
    font-size: 10px;
  }
}

body {
  margin: 0;
  padding: 0;
  color: var(--color-font);
  font:
    normal 400 1.8rem/1.6 'Source Sans 3',
    sans-serif;
  background-color: var(--color-background);
  border-top: 0.4rem solid var(--color-highlight);
  text-rendering: optimizelegibility;
  scroll-behavior: smooth;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

*::selection {
  color: var(--color-font);
  background-color: var(--color-highlight);
}

a,
a .link-effect {
  color: var(--color-font);
  text-decoration: underline;
  text-decoration-color: var(--color-highlight);
  text-decoration-thickness: 0.2rem;
  text-underline-offset: 0.3rem;
  box-shadow: inset 0 0 hsla(7deg 80% 54% / 15%);
  transition:
    color var(--hover-transition-duration),
    text-decoration-color var(--hover-transition-duration);
}

/* Some devices (mostly Samsung) have their touchscreen set up as a trackpad
   (which implies hover capability), and need an additional (pointer) check. */
@media (hover: hover) and (pointer: fine) {
  a:hover,
  a:hover .link-effect {
    color: var(--color-highlight);

    /* Explicit color assignment instead of e.g. `currentcolor`. In some cases,
       the underline is e.g. transparent. Then you don't want a flash of the font
       color, but rather transition from transparent to the hover color. */
    text-decoration-color: var(--color-highlight);
  }
}

a:focus-visible,
a:hover:focus-visible .link-effect {
  color: var(--color-highlight);
  text-decoration-color: var(--color-highlight);
  border-radius: 0.4rem;
  outline: 0.2rem dashed var(--color-highlight);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

.wrapper {
  max-width: 72rem;
  margin: 3.2rem auto 7.2rem;
  padding: 0 1.6rem;
  box-sizing: content-box; /* Ensure the max-width doesn't change */
}

/* Main header */
.site-header {
  display: flex;
  align-items: center;
  justify-content: space-between;
  font-weight: 700;
  margin-bottom: 6.4rem;
}

.site-header a {
  text-decoration-color: transparent;
}

.site-header ul {
  display: flex;
  align-items: center;
  margin: 0;
  padding: 0;
  list-style: none;
}

.site-header .logo {
  margin-right: 1.6rem;
  font-size: 2.4rem;
}

.site-header .logo span {
  color: var(--color-highlight);
}

.site-header .link {
  margin-right: 0.8rem;
  padding: 0.4rem 1rem;
  border-radius: 0.4rem;
}

@media (min-width: 480px) {
  .site-header .logo {
    margin-right: 2.8rem;
  }

  .site-header .link {
    margin-right: 1.2rem;
    padding: 0.6rem 1.4rem;
  }
}

@media (hover: hover) and (pointer: fine) {
  .site-header a:hover {
    text-decoration-color: var(--color-highlight);
  }
}

.site-header .link.active {
  background-color: var(--color-shade-10);
}

/* Profile picture */
.profile-picture {
  width: 12rem;
  height: 12rem;
  padding: 0.7rem;
  border: 0.2rem solid var(--color-highlight);
  border-radius: 50%;
  overflow: hidden;
}

.profile-picture img {
  display: block;
  width: 100%;
  height: 100%;
  max-width: 100%;
  border-radius: 50%;
}

/* Tag list */
.tag-list {
  display: flex;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
  font-size: 1.6rem;
  list-style: none;
}

.tag-list li {
  flex: 0 0 auto;
  display: block;
  margin: 1.6rem 1.6rem 0 0;
}

.tag-list.condensed li {
  margin: 0.8rem 0.8rem 0 0;
}

.tag-list a {
  display: block;
  padding: 0.7rem 1.4rem 0.7rem 1.2rem;
  color: var(--color-shade-75);
  line-height: normal;
  text-decoration: none;
  border-radius: 0.4rem;
  background-color: var(--color-shade-7);
}
/* ... */

